ChangeLog

2005-03-12 ekohl

   tools/widl/client.c
   tools/widl/server.c

Implement [string] attribute for pointers to char and wchar_t.


2005-03-12 ekohl

   tools/widl/client.c
   tools/widl/server.c

Implement [in], [out] and [in, out] support for pointers to basic types.


2005-03-10 ekohl

   tools/widl/client.c
   tools/widl/header.c
   tools/widl/server.c
   tools/widl/widl.c
   tools/widl/widl.h

Implement '-o' option. This is equivalent to MIDLs '/oldnames' option.


2005-03-06 ekohl

   tools/widl/client.c
   tools/widl/header.c
   tools/widl/header.h
   tools/widl/server.c

Support pointers to simple types as input arguments.


2005-02-27 sedwards

  tools/widl/y.tab.c
  tools/widl/parser.y
  tools/widl/widl.c
  tools/widl/widl.h
  tools/widl/server.c
  tools/widl/typelib.c

Merge in Winehq changes to reduce noise.

  tools/widl/server.h
  tools/widl/client.h
  tools/widl/proxy.h  

Deleted unneeded headers.

2005-02-26 ekohl
  tools/widl/server.c

Server stubs are void functions.
Fix a warning in the server stub descriptor.


2005-02-25 ekohl
  tools/widl/client.c
  tools/widl/header.c
  tools/widl/header.h
  tools/widl/server.c

Support multiple interfaces per idl file.
Support explicit binding handles.


2005-02-24 ekohl
  include/wine/rpcfc.h
  tools/widl/client.c
  tools/widl/header.c
  tools/widl/parser.l
  tools/widl/parser.y
  tools/widl/server.c

Support remaining basic types (float, double, small, wchar_t and handle_t).